--- a/demo.html
+++ b/demo.html
@@ -1,4 +1,29 @@
-
-Add .gitignore
-￼
-.gitignore template: None
+<!DOCTYPE html>
+<html lang="de">
+  <head>
+    <meta charset="UTF-8">
+    <title>Queer Radikaler CSD Mainz</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="manifest" href="./favicon/site.webmanifest">
+    <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+  </head>
+<body>
+  <div class="logo-container"><img id="logo" src="./img/logo.webp" alt="Logo des queerradikalen Christopher Streed Days (Text 'queer*radikaler' über dem Text 'CSD', darunter der Text '02. - 04. 06.2023 Haus Mainusch')"/></div>
+  <div id="demo-rat-div"><img id="demo-rat" src="./img/rat_notext.webp" alt="Bild ist eine comic Ratte die aufrecht steht und eine Sprühflasche in der Hand hat. Der Körper der Ratte ist Rot, die Füße und der Schwanz sind blau"></div>
+  <div class="aufruf">
+    <p class="stylized-text">Demonstration</p>
+    <p class="regular-text">Am 3. Juni wollen wir gemeinsam auf die Straße gehen um die Perspektiven queerer Menschen sichtbar zu machen. Heutzutage gehen die Rechte queerer Personen in vielen Ländern zurück, und auch in Deutschland droht der schäbige Entwurf des Selbstbestimmungsgesetzes das Recht von trans* Personen auf Selbstbestimmung einzuschränken. In diesem Kontext geben wir uns mit dem leider etablierten pink gewaschenen Regenbogenumzug nicht zufrieden. Laut und kämpferisch wollen wir den politischen Charakter des CSDs zurückfordern und für unsere Rechte einstehen.</p>
+    <p class="regular-text">Der radikale CSD ist queerfeministisch, antirassistisch, antiableistisch, antiklassistisch, antifaschistisch und antikapitalistisch. Wir wollen einen Raum schaffen, an dem Queers laut sein können, die besonders unsichbar gemacht werden. In diesem Sinne reflektieren wir unsere Privilegien und reihen uns hinter BIPoCs, Sexarbeitende, be_hinderte Menschen, trans* Personen, und andere marginalisierte Gruppen.</p>
+    <p class="regular-text">Wir positionieren uns gegen die Akzeptanz der Teilnahme der Polizei am CSD, first pride was a riot, und so soll es bleiben. Die Polizei stellt für viele marginalisierte Personen bis heute eine Bedrohung dar und ihre Präsenz kann für Betroffene von Polizeigewalt besonders triggernd sein. Daher schließt die Kooperation mit der Polizei grundsätzlich queere Menschen aus, die innerhalb der Community schon oft unsichtbar gemacht werden. Wir fordern die Selbstbestimmung Betroffener statt der Einmischung und Bevormundung durch den Staat.</p>
+    <p class="regular-text">Die Demo ist angemeldet und startet um 13:00 am Ernst-Ludwig-Platz. Vor Ort werden Awareness-Personen ansprechbar sein. Außerdem wird ein Abreisesystem organisiert, damit Menschen auf dem Rückweg der Demo nicht alleine gelassen werden.</p>
+    <p class="stylized-text">Rede</p>
+    <p class="regular-text">Wir suchen noch Personen, die im Rahmen der Demo eine Rede halten möchten. Diese kann als MP3-Datei aufgenommen und abgespielt werden. Wenn du auf der Demo eine Rede halten oder der Orga eine Aufnahme zukommen lassen möchtest, wende dich gerne an: <i>rede-qrcsd-mainz@systemli.org</i></p>
+    <p class="regular-text">Schreib in der Mail bitte worum es in deiner Rede gehen soll. Wir freuen uns besonders über Beiträge von BIPoCs und anderen Menschen, deren Stimmen zu oft nicht gehört werden. </p>
+  </div>
+</body>
+</html>
