--- a/kunstlyaufruf.html
+++ b/kunstlyaufruf.html
@@ -14,12 +14,12 @@
   </head>
 <body>
   <div class="logo-container"><img id="logo" src="./img/logo.webp" alt="Logo des queerradikalen Christopher Streed Days (Text 'queer*radikaler' über dem Text 'CSD', darunter der Text '02. - 04. 06.2023 Haus Mainusch')"/></div>
+  <img class="page-mascot" id="aufruf-unicorn" src="./img/unicorn_notext.webp" alt="Weißes comic Einhorn mit Horn in Trans farben, Mähne in Regenbogenfarben, die rechten Hufen rosa, die linken Hufen Blau und Schweif in rosa, gelb und lila mit Trans-Anarchie Symbol in lila auf dem Schenkel oben">
   <div class="aufruf">
     <p class="stylized-text">Queere Künstlys gesucht</p>
     <p class="regular-text"><span>Wir suchen nach Menschen, die Lust haben sich auf dem queerradikalen CSD am ersten Juni-Wochenende künstlerisch auszuleben!</p>
     <p class="stylized-text">Wir planen am Samstag den 03.06. einen Kleinkunst Abend</p>
     <p class="regular-text">Es sind alle darstellenden Kunstformen erwünscht; Poetry Slam, WordArt, Drag, Lipsync, Puppentheater, MusicActs, etc...</p>
-    <div id="aufruf-unicorn-div"><img id="aufruf-unicorn" src="./img/unicorn_notext.webp" alt="Weißes comic Einhorn mit Horn in Trans farben, Mähne in Regenbogenfarben, die rechten Hufen rosa, die linken Hufen Blau und Schweif in rosa, gelb und lila mit Trans-Anarchie Symbol in lila auf dem Schenkel oben"></div>
     <p class="regular-text">Danach wird der Abend in einer Jam-Session auslaufen.</p>
     <p class="regular-text">Wenn du Lust hast einen Beitrag zu leisten, schreib uns gerne per Mail an und wir planen dich ein!</p>
     <p class="stylized-text">kunsterbunt-mainz@web.de</p>
