made logo redirect to homepage

--- a/demo.html
+++ b/demo.html
@@ -13,7 +13,7 @@
     <meta name="theme-color" content="#ffffff">
   </head>
 <body>
-  <div class="logo-container"><img id="logo" src="./img/logo.webp" alt="Logo des queerradikalen Christopher Streed Days (Text 'queer*radikaler' über dem Text 'CSD', darunter der Text '02. - 04. 06.2023 Haus Mainusch')"/></div>
+  <div class="logo-container" href="./index.html"><a href="./index.html"><img id="logo" src="./img/logo.webp" href="./index.html" alt="Logo des queerradikalen Christopher Streed Days (Text 'queer*radikaler' über dem Text 'CSD', darunter der Text '02. - 04. 06.2023 Haus Mainusch')"/></a></div>
     <img class="page-mascot" src="./img/rat_notext.webp" alt="Bild ist eine comic Ratte die aufrecht steht und eine Sprühflasche in der Hand hat. Der Körper der Ratte ist Rot, die Füße und der Schwanz sind blau">
     <div class="aufruf">
       <p class="stylized-text">Demonstration</p>
