--- a/kunstlyaufruf.html
+++ b/kunstlyaufruf.html
@@ -13,7 +13,7 @@
     <meta name="theme-color" content="#ffffff">
   </head>
 <body>
-  <div class="logo-container"><img id="logo" src="./img/logo.webp" alt="Logo des queerradikalen Christopher Streed Days (Text 'queer*radikaler' über dem Text 'CSD', darunter der Text '02. - 04. 06.2023 Haus Mainusch')"/></div>
+  <div class="logo-container"><a href="./index.html"><img id="logo" src="./img/logo.webp" href="./index.html" alt="Logo des queerradikalen Christopher Streed Days (Text 'queer*radikaler' über dem Text 'CSD', darunter der Text '02. - 04. 06.2023 Haus Mainusch')"/></a></div>
   <img class="page-mascot" src="./img/unicorn_notext.webp" alt="Weißes comic Einhorn mit Horn in Trans farben, Mähne in Regenbogenfarben, die rechten Hufen rosa, die linken Hufen Blau und Schweif in rosa, gelb und lila mit Trans-Anarchie Symbol in lila auf dem Schenkel oben">
   <div class="aufruf">
     <p class="stylized-text">Queere Künstlys gesucht</p>
