Konzeptseite -> index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="animals">
     <div><a href ="#"><img id="cat" src="./img/cat.webp" alt="Bildtext ist 'Workshops'. Bild ist eine comic Katze mit den Farben der Prideflagge von Nicht-Binär"/></a></div>
     <div><a href ="./kunstlyaufruf.html"><img id="unicorn" src="./img/unicorn.webp" alt="Bildtext ist 'Kleinkunst'. Bild ist ein weißes comic Einhorn mit Horn in Trans farben, Mähne in Regenbogenfarben, die rechten Hufen rosa, die linken Hufen Blau und Schweif in rosa, gelb und lila mit Trans-Anarchie Symbol in lila auf dem Schenkel oben."/></a></div>
-    <div><a href ="#"><img id="capybara" src="./img/capybara.webp" alt="Bildtext ist 'Konzept'. Bild ist ein ein braunes Capybara im Comicstil"/></a></div>
+    <div><a href ="./konzept.html"><img id="capybara" src="./img/capybara.webp" alt="Bildtext ist 'Konzept'. Bild ist ein ein braunes Capybara im Comicstil"/></a></div>
     <div><a href ="./demo.html"><img id="rat" src="./img/rat.webp" alt="Bildtext ist 'Demo'. Bild ist eine comic Ratte die aufrecht steht und eine Sprühflasche in der Hand hat. Der Körper der Ratte ist Rot, die Füße und der Schwanz sind blau"/></a></div>
   </div>
   <p class="inprogress" id="ip2">Save the dates!</p>
