--- a/workshop.html
+++ b/workshop.html
@@ -17,6 +17,8 @@
     <img class="page-mascot" src="./img/cat.webp" alt="Bild ist eine comic Katze mit den Farben der Prideflagge von Nicht-Binär">
     <div class="aufruf">
       <p class="stylized-text">Workshops Zeitplan</p>
+      <p class="regular-text">Die Liste wird regelmäßig aktualisiert
+        <br/>Es folgen weitere Workshops</p>
       <table class="timetable" rules="all">
       <tr style="border-width: 1em;"><td colspan="2"><p class="regular-text table-seperator">&nbsp;Freitag&nbsp;</p></td></tr>
       <tr>
