--- a/workshop.html
+++ b/workshop.html
@@ -24,23 +24,12 @@
       <tr>
         <td>
           <p class="regular-text table-text">Freitag,
-            12 - 14 Uhr</p>
-        </td>
-        <td>
-          <p class="stylized-text table-text-header">Gendergerechtes Deutsch – Linguistische Argumente gegen populistische Ablehnung*</p>
-          <p class="stylized-text table-text-subheader">von The Odd.Acity [hen/ - ]*</p>
-          <p class="regular-text table-text">Über „Gendern“ gibt es viele Meinungen, die meisten gehen an einer konstruktiven Diskussion und konsequenter Inklusion von FLINTA* und LGBTIAQ* vorbei. Dieser Workshop nimmt die beliebtesten Aussagen gegen genderneutrale Sprache auf und liefert sprachwissenschaftliche Einblicke in Sprachwandel, Grammatik und Diskurs, sodass ihr bei der nächsten Diskussion (vielleicht keine konservativen Hardliner aber) interessierte Außenstehende überzeugen könnt. #Gendern #Gendersternchen #Sprache #Inklusion #queerlinguistics*</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p class="regular-text table-text">Freitag,
             14 - 16 Uhr</p>
         </td>
         <td>
           <p class="stylized-text table-text-header">Praxistipps für Binding und Tucking
-          <p class="stylized-text table-text-subheader">Lia [sie/ihr] und Ken</p>
-          <p class="regular-text table-text">Binding bzw. Tucking sind Methoden mit denen die äußeren Umrisse der Brust bzw. des Schritts so verändert werden können, dass sie flacher aussehen. Dies tun trans*nichtbinäre Menschen aber auch andere um zu beeinflussen wie weiblich/männlich sie gelesen werden, um Dysphorie zu mildern, etc. Der Workshop gibt Tipps wie Binding möglichst sicher gestaltet werden kann, um mentale und körperliche Gesundheit so gut wie möglich zu vereinbaren. Das Prinzip von Tucking wird erklärt und eine einfache Methode dafür ein passendes Hilfmittel (Gaff) herzustellen. Um die Herstellung auszuprobieren könnt ihr einen alten elastischen (Unter-)Hosenbund und eine alte Socke (muss über die Knöchel gehen) mitbringen. #diy #trans#nonbinary #health #dyphoria*</p>
+          <p class="stylized-text table-text-subheader">Lia [sie/ihr] und Kenneth</p>
+          <p class="regular-text table-text">Binding bzw. Tucking sind Methoden mit denen die äußeren Umrisse der Brust bzw. des Schritts so verändert werden können, dass sie flacher aussehen. Dies tun trans*nichtbinäre Menschen aber auch andere um zu beeinflussen wie weiblich/männlich sie gelesen werden, um Dysphorie zu mildern, etc. Der Workshop gibt Tipps wie Binding möglichst sicher gestaltet werden kann, um mentale und körperliche Gesundheit so gut wie möglich zu vereinbaren. Das Prinzip von Tucking wird erklärt und eine einfache Methode dafür ein passendes Hilfmittel (Gaff) herzustellen. Um die Herstellung auszuprobieren könnt ihr einen alten elastischen (Unter-)Hosenbund und eine alte Socke (muss über die Knöchel gehen) mitbringen. #diy #trans#nonbinary #health #dyphoria</p>
         </td>
       </tr>
       <tr>
@@ -51,7 +40,7 @@
         <td>
           <p class="stylized-text table-text-header">Zwischen trans*misogyner Faschisierung und liberaler Assimilation - Quo Vadis queerer Widerstand?
           <p class="stylized-text table-text-subheader">Mine Pleasure Bouvar [sie*/they]</p>
-          <p class="regular-text table-text">Zwischen globalem Rechtsruck, mit massivem Anstieg queerfeindlicher, insbesondere trans*misogyner Kulturkampf-Rhetorik und liberaler Menschenrechtspolitik steht queerer Aktivismus auf einem Scheideweg. Der Vortrag ergründet die Notwendigkeit, sich gegen den aktuell erstarkenden Faschismus zur Wehr zu setzen, der Antisemitismus und trans*Feindlichkeit zu seinem ideologischen Kitt zwischen white supremacy, religösem Fundamentalismus und trans*feindlichem Feminismus verwebt. Im selben Zuge wird ein Blick auf die Indienstnahme progressiver, queerfreundlicher Ästhetiken durch liberale Parteien geworfen, die Imperialismus, mangelhafte Klimapolitik und soziale Ungleichheit versuchen mit einem vorgeblichen Einsatz für Menschenrechte zu überschmücken. Mine Pleasure Bouvar fragt nach den Potentialen eines radikalen, antifaschistischen, queeren Widerstandes, der sich nicht für einen liberalen Homo-Euro-Nationalismus vereinnahmen lässt.*</p>
+          <p class="regular-text table-text">Zwischen globalem Rechtsruck, mit massivem Anstieg queerfeindlicher, insbesondere trans*misogyner Kulturkampf-Rhetorik und liberaler Menschenrechtspolitik steht queerer Aktivismus auf einem Scheideweg. Der Vortrag ergründet die Notwendigkeit, sich gegen den aktuell erstarkenden Faschismus zur Wehr zu setzen, der Antisemitismus und trans*Feindlichkeit zu seinem ideologischen Kitt zwischen white supremacy, religösem Fundamentalismus und trans*feindlichem Feminismus verwebt. Im selben Zuge wird ein Blick auf die Indienstnahme progressiver, queerfreundlicher Ästhetiken durch liberale Parteien geworfen, die Imperialismus, mangelhafte Klimapolitik und soziale Ungleichheit versuchen mit einem vorgeblichen Einsatz für Menschenrechte zu überschmücken. Mine Pleasure Bouvar fragt nach den Potentialen eines radikalen, antifaschistischen, queeren Widerstandes, der sich nicht für einen liberalen Homo-Euro-Nationalismus vereinnahmen lässt.</p>
         </td>
       </tr>
       <tr>
@@ -62,13 +51,23 @@
         <td>
           <p class="stylized-text table-text-header">Materialistischer Feminismus vs. Queerfeminismus?! Impulse für ein Gespräch über mögliche Brückenschläge statt weiterer Grabenkämpfe.
           <p class="stylized-text table-text-subheader">Joris Gregor [er/ihn/ - ]</p>
-          <p class="regular-text table-text">Die mit "Beißreflexe" provozierte Auseinandersetzung zwischen dem dort so genannten materialistischen Feminismus und dem dort so genannten Queerfeminismus hat Konflikte innerhalb der feministischen Bewegungen aktualisiert, die seit Erscheinen von Judith Butlers ‚Das Unbehagen der Geschlechter‘ vor sich hin schwelen. Anstatt den Graben immer wieder neu auszuheben, so die These des Vortrages, braucht es einen Brückenschlag. Der Vortrag ist damit insbesondere als ein Beitrag zur Verständigung zu verstehen, der aus queer_feministischer Perspektive den solidarischen Dialog mit differenzfeministischen Ansätzen sucht. Es werden die Gemeinsamkeiten beider Strömungen fokussiert und die Unterschiede in den Gemeinsamkeiten kritisch-solidarisch diskutiert, statt erneut die inkommensurablen Momente der Strömungen zu stabilisieren. Ziel ist die Skizzierung eines möglichen theoretischen Brückenschlags, eines queer_feministischen Materialismus, der die Errungenschaften der differenzfeministischen Identitätspolitik anerkennt, ohne hinter die Verdienste queerer Identitätskritik zurück zu fallen.*</p>
+          <p class="regular-text table-text">Die mit "Beißreflexe" provozierte Auseinandersetzung zwischen dem dort so genannten materialistischen Feminismus und dem dort so genannten Queerfeminismus hat Konflikte innerhalb der feministischen Bewegungen aktualisiert, die seit Erscheinen von Judith Butlers ‚Das Unbehagen der Geschlechter‘ vor sich hin schwelen. Anstatt den Graben immer wieder neu auszuheben, so die These des Vortrages, braucht es einen Brückenschlag. Der Vortrag ist damit insbesondere als ein Beitrag zur Verständigung zu verstehen, der aus queer_feministischer Perspektive den solidarischen Dialog mit differenzfeministischen Ansätzen sucht. Es werden die Gemeinsamkeiten beider Strömungen fokussiert und die Unterschiede in den Gemeinsamkeiten kritisch-solidarisch diskutiert, statt erneut die inkommensurablen Momente der Strömungen zu stabilisieren. Ziel ist die Skizzierung eines möglichen theoretischen Brückenschlags, eines queer_feministischen Materialismus, der die Errungenschaften der differenzfeministischen Identitätspolitik anerkennt, ohne hinter die Verdienste queerer Identitätskritik zurück zu fallen.</p>
+        </td>
+      <tr style="border-width: 1em;"><td colspan="2"><p class="regular-text table-seperator">&nbsp;Sonntag&nbsp;</p></td></tr>
+        <tr>
+        <td>
+          <p class="regular-text table-text">Sonntag,
+            12 - 14 Uhr</p>
+        </td>
+        <td>
+          <p class="stylized-text table-text-header">Gendergerechtes Deutsch – Linguistische Argumente gegen populistische Ablehnung</p>
+          <p class="stylized-text table-text-subheader">von The Odd.Acity [hen/ - ]</p>
+          <p class="regular-text table-text">Über „Gendern“ gibt es viele Meinungen, die meisten gehen an einer konstruktiven Diskussion und konsequenter Inklusion von FLINTA* und LGBTIAQ* vorbei. Dieser Workshop nimmt die beliebtesten Aussagen gegen genderneutrale Sprache auf und liefert sprachwissenschaftliche Einblicke in Sprachwandel, Grammatik und Diskurs, sodass ihr bei der nächsten Diskussion (vielleicht keine konservativen Hardliner aber) interessierte Außenstehende überzeugen könnt. #Gendern #Gendersternchen #Sprache #Inklusion #queerlinguistics*</p>
         </td>
       </tr>
-      <tr style="border-width: 1em;"><td colspan="2"><p class="regular-text table-seperator">&nbsp;Samstag&nbsp;</p></td></tr>
-      <tr>
+        <tr>
         <td>
-          <p class="regular-text table-text">Samstag,
+          <p class="regular-text table-text">Sonntag,
             14 - 16 Uhr</p>
         </td>
         <td>
@@ -79,24 +78,24 @@
       </tr>
       <tr>
         <td>
-          <p class="regular-text table-text">Samstag,
+          <p class="regular-text table-text">Sonntag,
             16 - 18 Uhr</p>
         </td>
         <td>
-          <p class="stylized-text table-text-header">Krav Maga Workshop*</p>
+          <p class="stylized-text table-text-header">Krav Maga Workshop</p>
           <p class="stylized-text table-text-subheader">Jannik Rienhoff [er/ihn]</p>
-          <p class="regular-text table-text">Der Kurs gibt theoretische und praktische Tipps um sich sicherer und wohler im Umgang mit (körperlichen) Bedrohungen zu fühlen und wird Möglichkeiten der Verteidigung aufzeigen. Vorerfahrungen oder körperliche Fitness sind nicht nötig. Der Kurs wird von Jannik Rienhoff (er/ihn) geleitet, der seit mehreren Jahren Ausbilder für Krav Maga bei ISD Krav Maga Mittelhessen ist. #Selbstverteidigung #krafmaga #diy*</p>
+          <p class="regular-text table-text">Der Kurs gibt theoretische und praktische Tipps um sich sicherer und wohler im Umgang mit (körperlichen) Bedrohungen zu fühlen und wird Möglichkeiten der Verteidigung aufzeigen. Vorerfahrungen oder körperliche Fitness sind nicht nötig. Der Kurs wird von Jannik Rienhoff (er/ihn) geleitet, der seit mehreren Jahren Ausbilder für Krav Maga bei ISD Krav Maga Mittelhessen ist. #Selbstverteidigung #krafmaga #diy</p>
         </td>
       </tr>
       <tr>
         <td>
-          <p class="regular-text table-text">Samstag,
+          <p class="regular-text table-text">Sonntag,
             18 - 20 Uhr</p>
         </td>
         <td>
-          <p class="stylized-text table-text-header">Einführung zu transformativer Gerechtigkeit aus queerer Perspektive*</p>
+          <p class="stylized-text table-text-header">Einführung zu transformativer Gerechtigkeit aus queerer Perspektive</p>
           <p class="stylized-text table-text-subheader">[ - ] und Mo [ - ]</p>
-          <p class="regular-text table-text">Der Workshop soll einen ersten Einblick in das Konzept von transformativer Gerechtigkeit geben. Prozesse transformativer Gerechtigkeit werden in Gemeinschaften genutzt, um Konflikte und Übergriffe autonom aufzuarbeiten – jenseits von Staat und Polizei. Der Workshop besteht aus einem Input zu Geschichte und Grundprinzipien der transformativen Gerechtigkeit aus queerer Perspektive und aus einem Austausch zu unserem Verhältnis zu Strafe, Strafsystem und mögliche Alternativen. #CommunityArbeit #Strafkritik #Polizeikritik*</p>
+          <p class="regular-text table-text">Der Workshop soll einen ersten Einblick in das Konzept von transformativer Gerechtigkeit geben. Prozesse transformativer Gerechtigkeit werden in Gemeinschaften genutzt, um Konflikte und Übergriffe autonom aufzuarbeiten – jenseits von Staat und Polizei. Der Workshop besteht aus einem Input zu Geschichte und Grundprinzipien der transformativen Gerechtigkeit aus queerer Perspektive und aus einem Austausch zu unserem Verhältnis zu Strafe, Strafsystem und mögliche Alternativen. #CommunityArbeit #Strafkritik #Polizeikritik</p>
         </td>
       </tr>
     </table>
