--- a/workshop.html
+++ b/workshop.html
@@ -72,7 +72,7 @@
         </td>
         <td>
           <p class="stylized-text table-text-header">Einführung in den Fettaktivismus</p>
-          <p class="stylized-text table-text-subheader">Luise Dermidem [sie/ihr]</p>
+          <p class="stylized-text table-text-subheader">Luise Demirden [sie/ihr]</p>
           <p class="regular-text table-text">folgt…</p>
         </td>
       </tr>
