--- a/konzept.html
+++ b/konzept.html
@@ -19,6 +19,10 @@
     <p class="stylized-text">Konzept</p>
     <p class="regular-text">Über das ganze Wochenende wollen wir einen Raum schaffen, in dem queere Personen sich austauschen, vernetzen, gemeinsam Spaß haben und empowern können. Dafür bieten wir neben den vielfältigen Workshops und der Demo unter anderen auch Kleinkunst, eine Kleider- und Binderbörse und Solitattoos.</p>
     <p class="regular-text">Bis auf die Demo findet das Programm im Haus Mainusch statt. Es wird am Freitag und Samstag Abend veganes Essen gegen Spende geben, am Sonntag laden wir zum einen ganztägigen Mitbringbrunch ein.</p>
+    <p class="regular-text">Vor Eintritt solltet ihr einen negativen COVID Schnelltest haben.</p>
+    <br/>
+    <p class="stylized-text">Barrierefreiheit</p>
+    <p class="regular-text">Wir haben einige Anträge gestellt und geben unser bestes die Veranstaltung so Barrierefrei wie möglich zu gestalten. Allerdings können wir bezogen auf die Sanitäranlagen und auf den Eingang des Haus Mainusch leider noch nichts versprechen. Diese Seite wird mit aktuellen Informationen aktualisiert, sobald es welche gibt.</p>
     <br/>
     <p class="stylized-text">Awareness und Sicherheit</p>
     <p class="regular-text">Wir wollen einen möglichst sicheren Rahmen für alle Teilnehmenden bieten. Über das gesamte Wochenende werden Türschichten belegt und ein Awareness-Team ansprechbar sein. Wende dich gerne an eine Awareness-Person - erkennbar durch das pinke Armband, wenn du einen Übergriff erlebst, beobachtest, oder wenn du dich anderweitig unwohl fühlst. Darüber hinaus soll unser selbstorganisierter Busbahnhilfe-Treffpunkt gemeinsame Abreisen erleichtern: Da kannst du Menschen treffen, die gerade auch zum Bahnhof oder in deine Richtung fahren wollen.</p>
