Link zu ph4nt Bandcamp

--- a/demo.html
+++ b/demo.html
@@ -33,7 +33,7 @@
       <p class="regular-text">• <span class="stylized-text">ca. 13:45 Uhr</span><br/><span class="tab">Start der Laufdemo</span><br/></p>
       <p class="regular-text">• <span class="stylized-text">ca. 14:15 Uhr</span><br/><span class="tab">Zwischenkundgebung am Münsterplatz</span><br/></p>
       <p class="regular-text">• <span class="stylized-text">ca. 15:00 Uhr</span><br/><span class="tab">Ende am Ernst-Ludwig-Platz</span><br/></p>
-      <p class="regular-text">• <span class="stylized-text">bis ca. 16:00 Uhr</span><br/><span class="tab">Abschluss mit Live Musik von ph4nt</span><br/></p>
+      <p class="regular-text">• <span class="stylized-text">bis ca. 16:00 Uhr</span><br/><span class="tab">Abschluss mit Live Musik von <a href="https://ph4nt24.bandcamp.com/" target="_blank">ph4nt</a></span><br/></p>
       <p class="stylized-text">Rede</p>
       <p class="regular-text">Wir suchen noch Personen, die im Rahmen der Demo eine Rede halten möchten. Diese kann als MP3-Datei aufgenommen und abgespielt werden. Wenn du auf der Demo eine Rede halten oder der Orga eine Aufnahme zukommen lassen möchtest, wende dich gerne an:<br/><u><i>rede-qrcsd-mainz@systemli.org</i></u></p>
       <p class="regular-text">Schreib in der Mail bitte worum es in deiner Rede gehen soll. Wir freuen uns besonders über Beiträge von BIPoCs und anderen Menschen, deren Stimmen zu oft nicht gehört werden. </p>
