--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@
   <p class="inprogress" id="ip2">Save the dates!</p>
   <p class="inprogress" id="ip3">Haus Mainusch, Staudingerweg 23, 55128 Mainz</p>
   <p class="inprogress" id="ip4">Haltestelle "Friedrich-von-Pfeiffer-Weg"</p>
+  <br></br>
+  <p class="inprogress">Wir haben für die Dauer des CSDs eine barrierefreie Toilette gemietet, die auf dem Haus Mainusch Gelände zur Verfügung stehen wird.>/p>
 </body>
 </html>
