Timetable on landing page

--- a/index.html
+++ b/index.html
@@ -20,8 +20,84 @@
     <div><a href ="./konzept.html"><img class="front-page-animal" src="./img/capybara.webp" alt="Bildtext ist 'Konzept'. Bild ist ein ein braunes Capybara im Comicstil"/></a></div>
     <div><a href ="./demo.html"><img class="front-page-animal" src="./img/rat.webp" alt="Bildtext ist 'Demo'. Bild ist eine comic Ratte die aufrecht steht und eine Sprühflasche in der Hand hat. Der Körper der Ratte ist Rot, die Füße und der Schwanz sind blau"/></a></div>
   </div>
-  <p class="inprogress" id="ip2">Save the dates!</p>
-  <p class="inprogress" id="ip3">Haus Mainusch, Staudingerweg 23, 55128 Mainz</p>
-  <p class="inprogress" id="ip4">Haltestelle "Friedrich-von-Pfeiffer-Weg"</p>
+  <div class="index-table" >
+  <table cellpadding="1" cellspacing="1" class="index-timetable" rules="all">
+    <tbody>
+      <tr >
+        <td class="index-table-cell cell-" style="width: 10em !important;"><p class="stylized-text table-text-header" >Uhrzeit</p></td>
+        <td colspan="3" rowspan="1" class="index-table-cell cell-"><p class="stylized-text table-text-header">Programm des queer*radikalen CSD im Haus Mainusch</p></td>
+      </tr>
+      <tr>
+        <td colspan="4" class="index-table-cell cell-"><p class="stylized-text table-text-header">Freitag</</td>
+      </tr>
+      <tr>
+        <td class="index-table-cell"><p class="regular-text table-text">14-16 Uhr</p></td>
+        <td class="index-table-cell cell-workshop"><p class="regular-text table-text">Tuck/bind Workshop</p></td>
+        <td colspan="2" rowspan="3" class="index-table-cell cell-hangout"><p class="regular-text table-text">Hangout, Infomaterial, Busstop, Awareness, Musik, Getr&auml;nke, Snacks</p></td>
+      </tr>
+      <tr>
+        <td class="index-table-cell"><p class="regular-text table-text">16-18 Uhr</p></td>
+        <td class="index-table-cell cell-workshop"><p class="regular-text table-text">Transmisogynie Workshop</p></td>
+      </tr>
+      <tr>
+        <td class="index-table-cell"><p class="regular-text table-text">18-20 Uhr</p></td>
+        <td class="index-table-cell cell-workshop"><p class="regular-text table-text">Interperspektiven/Materialismus Workshop</p></td>
+      </tr>
+      <tr>
+        <td class="index-table-cell"><p class="regular-text table-text">20-01 Uhr</p></td>
+        <td colspan="2" rowspan="1" class="index-table-cell cell-program"><p class="regular-text table-text">Kreuz und queer Kneipe [open end]</p></td>
+        <td class="index-table-cell cell-food" style="width: 16em !important;"><p class="regular-text table-text">K&uuml;fa ab 20 Uhr</p></td>
+      </tr>
+      <tr>
+        <td colspan="4" class="index-table-cell cell-"><p class="stylized-text table-text-header">Samstag</</td>
+      </tr>
+      <tr>
+        <td class="index-table-cell"><p class="regular-text table-text">13-16 Uhr</p></td>
+        <td colspan="3" rowspan="1" class="index-table-cell cell-demo"><p class="regular-text table-text">Demonstration (Start: Ernst-Ludwig-Platz)</p></td>
+      </tr>
+      <tr>
+        <td class="index-table-cell"><p class="regular-text table-text">16-19 Uhr</p></td>
+        <td colspan="2" rowspan="1" class="index-table-cell cell-hangout"><p class="regular-text table-text">Hangout, Infomaterial, Busstop, Awareness, Musik, Getr&auml;nke, Snacks</p></td>
+        <td class="index-table-cell cell-tattoo"><p class="regular-text table-text">Soli-Tattoos</p></td>
+      </tr>
+      <tr>
+        <td class="index-table-cell cell-"><p class="regular-text table-text">19-21 Uhr</p></td>
+        <td colspan="2" rowspan="1" class="index-table-cell cell-program"><p class="regular-text table-text">Kleinkunst/Drag Abend</p></td>
+        <td colspan="1" rowspan="2" class="index-table-cell cell-food"><p class="regular-text table-text">K&uuml;fa ab 19 Uhr</p></td>
+      </tr>
+      <tr>
+        <td class="index-table-cell cell-"><p class="regular-text table-text">21-01 Uhr</p></td>
+        <td colspan="2" rowspan="1" class="index-table-cell cell-program"><p class="regular-text table-text">Jamsession [open end]</p></td>
+      </tr>
+      <tr>
+        <td colspan="4" class="index-table-cell cell-"><p class="stylized-text table-text-header">Sonnntag</</td>
+      </tr>
+      <tr>
+        <td class="index-table-cell cell-"><p class="regular-text table-text">12-14 Uhr</p></td>
+        <td class="index-table-cell cell-workshop"><p class="regular-text table-text">Gendergerechtes Deutsch Workshop</p></td>
+        <td colspan="1" rowspan="4" class="index-table-cell cell-hangout" style="width: 15em !important;"><p class="regular-text table-text">Ganzt&auml;giger, veganer Brunch, Hangout, Infomaterial, Busstop, Awareness, Musik, Getr&auml;nke.</p></td>
+        <td colspan="1" rowspan="4" class="index-table-cell cell-tattoo"><p class="regular-text table-text">Soli-Tattoos</p></td>
+      </tr>
+      <tr>
+        <td class="index-table-cell cell-"><p class="regular-text table-text">14-16 Uhr</p></td>
+        <td class="index-table-cell cell-workshop"><p class="regular-text table-text">Fettaktivismus Workshop</p></td>
+      </tr>
+      <tr>
+        <td class="index-table-cell cell-"><p class="regular-text table-text">16-18 Uhr</p></td>
+        <td class="index-table-cell cell-workshop"><p class="regular-text table-text">Krav Maga Workshop</p></td>
+      </tr>
+      <tr>
+        <td class="index-table-cell cell-"><p class="regular-text table-text">18-20 Uhr</p></td>
+        <td class="index-table-cell cell-workshop"><p class="regular-text table-text">Transformative Gerechtigkeit / queere Kritik an der Polizei<br />
+        Workshop</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+<br/>
+<br/>
+<p class="inprogress" id="ip2">Save the dates!</p>
+<p class="inprogress" id="ip3">Haus Mainusch, Staudingerweg 23, 55128 Mainz</p>
+<p class="inprogress" id="ip4">Haltestelle "Friedrich-von-Pfeiffer-Weg"</p>
 </body>
 </html>
