--- a/workshop.html
+++ b/workshop.html
@@ -95,9 +95,7 @@
         </td>
         <td>
           <p class="stylized-text table-text-header">Einführung zu transformativer Gerechtigkeit aus queerer Perspektive</p>
-          <p class="stylized-text table-text-subheader">[ - ] und Mo [ - ]</p>
-          <p class="regular-text table-text">Der Workshop soll einen ersten Einblick in das Konzept von transformativer Gerechtigkeit geben. Prozesse transformativer Gerechtigkeit werden in Gemeinschaften genutzt, um Konflikte und Übergriffe autonom aufzuarbeiten – jenseits von Staat und Polizei. Der Workshop besteht aus einem Input zu Geschichte und Grundprinzipien der transformativen Gerechtigkeit aus queerer Perspektive und aus einem Austausch zu unserem Verhältnis zu Strafe, Strafsystem und mögliche Alternativen. #CommunityArbeit #Strafkritik #Polizeikritik</p>
-        </td>
+          <p class="stylized-text table-text-subheader">Dieser Workshop fällt leider aus!</p>
       </tr>
     </table>
   </div>
