--- a/index.html
+++ b/index.html
@@ -98,5 +98,11 @@
 <p class="inprogress" id="ip2">Save the dates!</p>
 <p class="inprogress" id="ip3">Haus Mainusch, Staudingerweg 23, 55128 Mainz</p>
 <p class="inprogress" id="ip4">Haltestelle "Friedrich-von-Pfeiffer-Weg"</p>
+  <br/>
+  <p class="stylized-text">Hygiene</p>
+  <p class="regular-text">Vor Eintritt solltet ihr einen negativen COVID Schnelltest gemacht haben. Bringt bitte eine Maske mit, um sie in den Innenräumen zu tragen.</p>
+    <br/>
+    <p class="stylized-text">Barrierefreiheit</p>
+    <p class="regular-text">Alle Außenräume (für Kleinkunst und Hangout) und der Ort für die Worshops sind rollstuhlgerecht zugänglich, eine barrierefreie Toilette ist vor Ort verfügbar. Die Soli-Tattoos werden aus Hygienegründen nur im Haus gemacht, das leider aktuell nicht rollstuhlgerecht erreichbar ist.</p>
 </body>
 </html>
