--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </tr>
       <tr>
         <td class="index-table-cell cell-"><p class="regular-text table-text">18-20 Uhr</p></td>
-        <td class="index-table-cell cell-workshop"><p class="regular-text table-text">Transformative Gerechtigkeit / queere Kritik an der Polizei Workshop</td>
+        <td class="index-table-cell cell-workshop"><p class="regular-text table-text"><s>Transformative Gerechtigkeit / queere Kritik an der Polizei Workshop</s><br/>Dieser Workshop fällt leider aus</td>
       </tr>
     </tbody>
   </table>
